fix alignment

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -105,6 +105,15 @@ footer{
 	text-transform: capitalize;
 	text-align: center;
 }
+.align-text{
+	display:inline-block;
+	align: center;
+	vertical-align: middle;
+}
+.align-img{
+	display:inline-block;
+	vertical-align: middle;
+}
 .flex-container{
 	display: flex;
 	justify-content: center;
